INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

#MFU_ADD_TOOL(dfind)
ADD_EXECUTABLE(dfind dfind.c dfind_core.c)
TARGET_LINK_LIBRARIES(dfind PRIVATE mfu uuid ${MFU_EXTERNAL_LIBS})
SET_TARGET_PROPERTIES(dfind PROPERTIES C_STANDARD 99)
INSTALL(TARGETS dfind DESTINATION ${CMAKE_INSTALL_BINDIR})

ADD_LIBRARY(mfu_dfind SHARED dfind_core.c)
INSTALL(TARGETS mfu_dfind DESTINATION ${CMAKE_INSTALL_LIBDIR})

ADD_LIBRARY(mfu_dfind_o OBJECT dfind_core.c)
ADD_LIBRARY(mfu_dfind-static STATIC $<TARGET_OBJECTS:mfu_dfind_o>)
INSTALL(TARGETS mfu_dfind-static DESTINATION ${CMAKE_INSTALL_LIBDIR})
